--- a/_posts/2017-05-11-__trashed.markdown
+++ b/_posts/2017-05-11-__trashed.markdown
@@ -1,13 +1,10 @@
 ---
-author: nickzanobini
+author: Nick Zanobini
 comments: true
 date: 2017-05-11 19:07:08+00:00
 layout: post
-link: https://nickzanobini.wordpress.com/2017/05/11/__trashed/
 published: false
-slug: __trashed
 title: Vision Controlled Robotic Arm
-wordpress_id: 748
 categories:
 - arm
 - ax12a
